<resources>
    <string name="app_name">DiaBeat</string>
    <string name="password_reset_msg">Please enter your username and we will email you a link to reset your password.</string>
    <string name="edit_profile">ُEdit Profile</string>
    <string name="username">Username</string>
    <string name="send_email">send_email</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="birthday">Birthday</string>
    <string name="Open">open</string>
    <string name="Close">close</string>
    <string name="sign_up_for_an_account">Sign up for an account</string>
    <string name="forgot_your_password">forgot your password?</string>
    <string name="password">Password</string>
    <string name="health_status">Health Status</string>
    <string name="hi_guest">Hi, Guest!</string>
    <string name="slash">/</string>
    <string name="appointments">Appointments</string>
    <string name="upcoming_appointments">Upcoming Appointment(s)</string>
    <string name="keep_calm">KEEP CALM!</string>

</resources>