<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PasswordResetActivity">

    <ImageView
        android:id="@+id/imIcon"
        android:layout_width="250dp"
        android:layout_height="250dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/forgot_password" />

    <LinearLayout
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_marginTop="40dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imIcon">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="68dp"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/password_reset_msg"
            android:textColor="@color/colorPrimaryDark" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:gravity="center_vertical"
            android:text="@string/username"
            android:textColor="@color/colorPrimary"
            android:layout_marginStart="15dp" />

        <EditText
            android:id="@+id/userName"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/rounded_corners_edit_views"
            android:ems="10"
            android:inputType="textPersonName"
            android:paddingLeft="10dp"
            android:paddingStart="10dp"
            android:autofillHints="Enter your email"
            tools:ignore="RtlSymmetry" />

        <Button
            android:id="@+id/sendEmail"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_marginTop="25dp"
            android:onClick="NavigateLogIn"
            android:background="@drawable/round_button"
            android:text="@string/send_email"
            android:textColor="#FFFFFF" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>