<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
xmlns:android="http://schemas.android.com/apk/res/android">


<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity_login">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="175dp"
        android:layout_height="182dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/login" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="300dp"

        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4">
        android:orientation="vertical">


        <TextView
            android:id="@+id/textView6"
            android:layout_width="88dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="65dp"
            android:layout_marginBottom="5dp"
            android:isScrollContainer="false"
            android:keepScreenOn="false"
            android:soundEffectsEnabled="false"
            android:text="@string/username"
            android:textSize="18sp"
            android:textColor="@color/colorPrimary" />

        <EditText
            android:id="@+id/logInUserName"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:background="@drawable/rounded_corners_edit_views"
            android:ems="10"
            android:inputType="textEmailAddress" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="88dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginRight="65dp"
            android:layout_marginBottom="5dp"
            android:textSize="18sp"
            android:text="@string/password"
            android:textColor="@color/colorPrimary" />

        <EditText
            android:id="@+id/logInPassword"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:background="@drawable/rounded_corners_edit_views"
            android:ems="10"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="45dp"
            android:layout_marginTop="10dp"
            android:onClick="NavigateForgetMyPassword"
            android:text="@string/forgot_your_password"
            android:textColor="@color/colorPrimary"
            android:textSize="15sp"
            android:textStyle="bold"
            android:layout_marginLeft="53dp" />

        <Button
            android:id="@+id/login_button"
            android:layout_width="129dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/round_button"
            android:text="Log in"
            android:textColor="@color/textButtonColor"
            android:textSize="15dp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:clickable="true"
            android:onClick="navigateSignUp"
            android:text="@string/sign_up_for_an_account"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>

</RelativeLayout>